fixed the horizontal scrolling bar in the about page

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
     --default-font-family:  "poppins", san-serif;
     --secondary-color: #f9f7fe;
 }
+
 h1, 
 h2, 
 h3, 
@@ -77,6 +78,7 @@ nav {
 .content h1 {
     font-size: 64px;
     line-height: 80px;
+    font-family: var(--heading-font-family);
 }
 
 .content h2 {
@@ -209,7 +211,8 @@ footer {
         max-width: 40px;
     }
 
-    #img-contact {
-        width: 100%;
+    #about-img {
+        max-width: 90%;
     }
+
 }
